--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
                 flex-direction: row;
                 align-items: center;
                 justify-content: center;
-                margin-bottom: 60px;
             }
 
             .controls {
@@ -48,7 +47,6 @@
                 color: white;
                 border: none;
                 cursor: pointer;
-                border-radius: 10px;
             }
 
             button:hover {
@@ -60,6 +58,28 @@
                 margin-left: auto;
                 margin-right: auto;
                 width: 50%;
+                border: 2;
+                border: 1px solid black;
+            }
+
+            .divider {
+                margin-top: 60px;
+            }
+
+            a {
+                display: block;
+                text-align: center;
+                font-size: 20px;
+                font-weight: bold;
+                color: blue;
+            }
+
+            a:hover {
+                color: rgb(0, 208, 255);
+            }
+
+            a:visited {
+                color: rgb(0, 0, 255);
             }
         </style>
         <script src="main.js" defer></script>
@@ -76,7 +96,15 @@
                 <button id="debugModeButton">Debug mode : Off</button>
             </div>
         </div>
+
+        <div class="divider"></div>
+
         <div class="heading">Few Patterns</div>
         <img src="patterns.png" alt="some patterns">
+
+        <div class="divider"></div>
+
+        <div class="heading">Wikipedia Link</div>
+        <a href="https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life" target="_blank">Conway's Game of Life</a>
     </body>
 </html>
