--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <button id="stepButton">Step</button>
                 <button id="clearButton">Clear</button>
                 <button id="gridVisibilityButton">Show Grid</button>
-                <button id="debugModeButton">Debug mode : Off</button>
+                <button id="debugModeButton">Show Debug Mode</button>
                 <p>Left click to draw</p>
                 <p>Right click to erase</p>
             </div>
