added flood fill and flood erases

--- a/index.html
+++ b/index.html
@@ -114,13 +114,15 @@
                     <button id="drawButton">Draw</button>
                     <button id="eraseButton">Erase</button>
                 </div> -->
-                <button id="playOrPauseButton">Play</button>
+                <button id="playOrPauseButton">Play  ▶</button>
                 <button id="stepButton">Step</button>
                 <button id="clearButton">Clear</button>
                 <button id="gridVisibilityButton">Show Grid</button>
                 <button id="debugModeButton">Show Debug Mode</button>
                 <p>Left click to draw</p>
                 <p>Right click to erase</p>
+                <p>F + Left click to flood fill</p>
+                <p>F + Right click to flood erase</p>
             </div>
         </div>
 
@@ -133,5 +135,9 @@
 
         <div class="heading">Useful Links</div>
         <a href="https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life" target="_blank">[Wikipedia] Conway's Game of Life</a>
+
+        <div class="divider"></div>
+        <div class="divider"></div>
+        <div class="divider"></div>
     </body>
 </html>
