--- a/index.html
+++ b/index.html
@@ -137,7 +137,10 @@
         <a href="https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life" target="_blank">[Wikipedia] Conway's Game of Life</a>
 
         <div class="divider"></div>
-        <div class="divider"></div>
+
+        <div class="heading">Code Link</div>
+        <a href="https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life" target="_blank">[Wikipedia] Conway's Game of Life</a>
+
         <div class="divider"></div>
     </body>
 </html>
