--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <div class="divider"></div>
 
         <div class="heading">Code Link</div>
-        <a href="https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life" target="_blank">[Wikipedia] Conway's Game of Life</a>
+        <a href="https://github.com/JonayedMohiuddin/ConwaysGameOfLife/blob/main/main.js" target="_blank">[Github] Conway's Game of Life > main.js</a>
 
         <div class="divider"></div>
     </body>
