added gosper gun

--- a/index.html
+++ b/index.html
@@ -170,17 +170,18 @@
         </div>
 
         <div class="divider"></div>
-
         <div class="heading">Few Patterns</div>
         <img src="patterns.png" alt="some patterns" />
 
         <div class="divider"></div>
+        <div class="heading">Single Gospers Glider Gun Generating Gliders</div>
+        <img src="Gospers_glider_gun.gif" alt="Single Gospers Glider Gun Generating Gliders" />
 
+        <div class="divider"></div>
         <div class="heading">Useful Links</div>
         <a href="https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life" target="_blank">[Wikipedia] Conway's Game of Life</a>
 
         <div class="divider"></div>
-
         <div class="heading">Code Link</div>
         <a href="https://github.com/JonayedMohiuddin/ConwaysGameOfLife/blob/main/main.js" target="_blank">[Github] Conway's Game of Life > main.js</a>
 
